--- a/services/css/style.css
+++ b/services/css/style.css
@@ -71,7 +71,8 @@ i {
 }
 ul {
 	list-style: outside none none;
-	margin: 0;
+	list-style-type: disc;
+	margin: 20px;
 	padding: 0;
 }
 li {
@@ -1505,9 +1506,4 @@ header.header-fixed .header .navbar-nav .nav-item .nav-link {
 .single-work-process .work-process-divider {
 	display:none;
 }
-}
-
-ul {
-  list-style-type: disc; /* sets the bullet point style */
-  padding-left: 20px; /* adds space between the bullet and the content */
 }
